[HIG-1586] fix overflow on plan card

--- a/frontend/src/pages/Billing/BillingPlanCard/BillingPlanCard.module.scss
+++ b/frontend/src/pages/Billing/BillingPlanCard/BillingPlanCard.module.scss
@@ -26,7 +26,7 @@
 }
 
 .extraMembersBreakdown {
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .billingFrequency {
